fixed header shadow on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,11 @@ body::-webkit-scrollbar {
 
 .shadow {
     width: 99.99%;
-    height: 20px;
+    height: 15px;
     background-image: linear-gradient(rgba(0,0,0,1), rgba(0,0,0,0));
     margin:0;
     position: relative;
-    bottom: 0;
+    bottom: 1px;
     left: 0;
     z-index: 11; 
 }
